# ekantipur-scraper

./: .gitignore  .pre-commit-config.yaml  logger.py  output.json  prompts.txt  pyproject.toml  scraper.py
.github/workflows/: pre-commit.yml
